Bug 154780 - Krita crashes when I drag file in it and choose "Open as new document"
Summary: Krita crashes when I drag file in it and choose "Open as new document"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 1.6.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2007-12-28 22:48 UTC by Dorian Vasco
Modified: 2008-10-26 23:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (4.21 KB, text/plain)
2008-10-26 15:45 UTC, Elián Hanisch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dorian Vasco 2007-12-28 22:48:34 UTC
Version:           1.6.3 (using KDE 3.5.7 "release 72.4" , openSUSE 10.3)
Compiler:          Target: i586-suse-linux
OS:                Linux (i686) release 2.6.22.13-0.3-default

Krita crashes when I drag a tif-file from Konqueror in it and choose "Open as new document"


Backtracing:


Überprüfung der Systemkonfiguration beim Start deaktiviert.

 [?1034h(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb69726d0 (LWP 6980)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xb6f58150 in free () from /lib/libc.so.6
#7  0xb70dba61 in operator delete () from /usr/lib/libstdc++.so.6
#8  0xb6e07468 in KPopupMenu::~KPopupMenu () from /opt/kde3/lib/libkdeui.so.4
#9  0xb7517e6b in QWidget::~QWidget () from /usr/lib/qt3/lib/libqt-mt.so.3
#10 0xb672138e in KoView::~KoView () from /opt/kde3/lib/libkofficecore.so.3
#11 0xb61079ac in KisView::~KisView () from /opt/kde3/lib/libkritaui.so.1
#12 0xb66e639e in QPtrList<KoView>::deleteItem ()
   from /opt/kde3/lib/libkofficecore.so.3
#13 0xb7791bdc in QGList::clear () from /usr/lib/qt3/lib/libqt-mt.so.3
#14 0xb66f24fe in KoMainWindow::setRootDocument ()
   from /opt/kde3/lib/libkofficecore.so.3
#15 0xb66f488d in KoMainWindow::slotLoadCompleted ()
   from /opt/kde3/lib/libkofficecore.so.3
#16 0xb66fb402 in KoMainWindow::qt_invoke ()
   from /opt/kde3/lib/libkofficecore.so.3
#17 0xb74df8ad in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#18 0xb74e044d in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#19 0xb7ed2a3c in KParts::ReadOnlyPart::completed ()
   from /opt/kde3/lib/libkparts.so.2
#20 0xb7edc9f6 in KParts::ReadOnlyPart::openURL ()
   from /opt/kde3/lib/libkparts.so.2
#21 0xb66e2086 in KoDocument::openURL () from /opt/kde3/lib/libkofficecore.so.3
#22 0xb66f211f in KoMainWindow::openDocumentInternal ()
   from /opt/kde3/lib/libkofficecore.so.3
#23 0xb66f8c30 in KoMainWindow::openDocument ()
   from /opt/kde3/lib/libkofficecore.so.3
#24 0xb60fd085 in KisView::canvasGotDropEvent ()
   from /opt/kde3/lib/libkritaui.so.1
#25 0xb6109af0 in KisView::qt_invoke () from /opt/kde3/lib/libkritaui.so.1
#26 0xb74df8ad in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#27 0xb6077681 in KisCanvas::sigGotDropEvent ()
   from /opt/kde3/lib/libkritaui.so.1
#28 0xb6077def in KisCanvas::qt_emit () from /opt/kde3/lib/libkritaui.so.1
#29 0xb74df8f1 in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#30 0xb6078ad1 in KisCanvasWidget::sigGotDropEvent ()
   from /opt/kde3/lib/libkritaui.so.1
#31 0xb6078ce4 in KisCanvasWidget::widgetGotDropEvent ()
   from /opt/kde3/lib/libkritaui.so.1
#32 0xb60cfb09 in KisQPaintDeviceCanvasWidget::dropEvent ()
   from /opt/kde3/lib/libkritaui.so.1
#33 0xb7518918 in QWidget::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#34 0xb74810ac in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#35 0xb7481e63 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#36 0xb7af6ee2 in KApplication::notify () from /opt/kde3/lib/libkdecore.so.4
#37 0xb742bdfb in qt_handle_xdnd_drop () from /usr/lib/qt3/lib/libqt-mt.so.3
#38 0xb74123a2 in QApplication::x11ClientMessage ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#39 0xb741f5a7 in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#40 0xb7430070 in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#41 0xb7497c30 in QEventLoop::enterLoop () from /usr/lib/qt3/lib/libqt-mt.so.3
#42 0xb7497ac6 in QEventLoop::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#43 0xb7480c1f in QApplication::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#44 0xb6787098 in kdemain () from /opt/kde3/lib/libkdeinit_krita.so
#45 0xb7efc454 in kdeinitmain () from /opt/kde3/lib/kde3/krita.so
#46 0x0804ece0 in QGList::~QGList ()
#47 0x00000002 in ?? ()
#48 0x08081d78 in ?? ()
#49 0x00000001 in ?? ()
#50 0x00000000 in ?? ()
Comment 1 Halla Rempt 2007-12-28 23:01:28 UTC
I can (easily) reproduce, si this is confirmed.
Comment 2 Hanno 2008-10-26 12:12:45 UTC
still reproducable in koffice2-krita-1.9.98.1-34.2.x86_64
Comment 3 Elián Hanisch 2008-10-26 15:37:41 UTC
I can reproduce koffice2 beta2 r876041
Comment 4 Elián Hanisch 2008-10-26 15:45:54 UTC
Created attachment 28158 [details]
backtrace
Comment 5 Christophe Marin 2008-10-26 15:49:37 UTC
Please paste backtraces directly in your comments.

Application: Krita (krita), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb43006e0 (LWP 11164)]
[KCrash handler]
#6  0xb7fe0410 in __kernel_vsyscall ()
#7  0xb553d085 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb553ea01 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb5575b7c in ?? () from /lib/tls/i686/cmov/libc.so.6
#10 0xb558161b in free () from /lib/tls/i686/cmov/libc.so.6
#11 0xb5748b11 in operator delete () from /usr/lib/libstdc++.so.6
#12 0xb774f527 in KMenu::~KMenu () from /usr/lib/kde4/lib/libkdeui.so.5
#13 0xb6927d5c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#14 0xb59370ee in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#15 0xb79044d2 in ~KoView (this=0x8788b10, __vtt_parm=0xb7fd2724)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoView.cpp:214
#16 0xb7f18871 in ~KisView2 (this=0x8788b10)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/krita/ui/kis_view2.cpp:232
#17 0xb78e369a in Q3PtrList<KoView>::deleteItem (this=0xbfb0da2c, d=0x8788b10)
    at /usr/include/qt4/Qt3Support/q3ptrlist.h:162
#18 0xb7162b4a in Q3GList::clear () from /usr/lib/libQt3Support.so.4
#19 0xb78e36b9 in Q3PtrList<KoView>::clear (this=0xbfb0da2c)
    at /usr/include/qt4/Qt3Support/q3ptrlist.h:105
#20 0xb78dd6f3 in KoMainWindow::setRootDocument (this=0x81fb460, doc=0x91bd7c0)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:497
#21 0xb78e0510 in KoMainWindow::slotLoadCompleted (this=0x81fb460)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:736
#22 0xb78e09e1 in KoMainWindow::qt_metacall (this=0x81fb460, 
    _c=QMetaObject::InvokeMetaMethod, _id=30, _a=0xbfb0db88)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/libs/main/KoMainWindow.moc:152
#23 0xb692cf79 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#24 0xb692d642 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#25 0xb73fd2d7 in KParts::ReadOnlyPart::completed ()
   from /usr/lib/kde4/lib/libkparts.so.4
#26 0xb73ff1b0 in KParts::ReadOnlyPart::openUrl ()
   from /usr/lib/kde4/lib/libkparts.so.4
#27 0xb78ba27d in KoDocument::openUrl (this=0x91bd7c0, _url=@0xbfb0de24)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoDocument.cpp:1385
#28 0xb78dd0a9 in KoMainWindow::openDocumentInternal (this=0x81fb460, 
    url=@0xbfb0de24, newdoc=0x91bd7c0)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:712
#29 0xb78db6f2 in KoMainWindow::openDocument (this=0x81fb460, url=@0xbfb0de24)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/libs/main/KoMainWindow.cpp:672
#30 0xb7f185bc in KisView2::dropEvent (this=0x8788b10, event=0xbfb0e2bc)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/krita/ui/kis_view2.cpp:292
#31 0xb5941742 in QWidget::event () from /usr/lib/libQtGui.so.4
#32 0xb58e9f9c in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#33 0xb58ef5bc in QApplication::notify () from /usr/lib/libQtGui.so.4
#34 0xb7693483 in KApplication::notify () from /usr/lib/kde4/lib/libkdeui.so.5
#35 0xb69180b9 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#36 0xb5962b5c in ?? () from /usr/lib/libQtGui.so.4
#37 0xb5946e51 in QApplication::x11ClientMessage () from /usr/lib/libQtGui.so.4
#38 0xb5955595 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#39 0xb597dc2a in ?? () from /usr/lib/libQtGui.so.4
#40 0xb5298cc6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#41 0xb529c083 in ?? () from /usr/lib/libglib-2.0.so.0
#42 0xb529c63e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#43 0xb69439f8 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#44 0xb597da25 in ?? () from /usr/lib/libQtGui.so.4
#45 0xb691733d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#46 0xb69174cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#47 0xb691974d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#48 0xb58e9897 in QApplication::exec () from /usr/lib/libQtGui.so.4
#49 0xb7fdc516 in kdemain (argc=1, argv=0xbfb0ea94)
    at /home/m4v-kde3/dev/kde/src/koffice/trunk/krita/main.cc:56
#50 0x08048966 in main (argc=)
    at /home/m4v-kde3/dev/kde/build/koffice/trunk/krita/krita_dummy.cpp:3
#0  0xb7fe0410 in __kernel_vsyscall ()
Comment 6 Sven Langkamp 2008-10-26 23:23:42 UTC
SVN commit 876257 by langkamp:


fix crash

BUG: 154780


 M  +1 -1      kis_view2.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=876257