fix crash

BUG: 154780

svn path=/trunk/koffice/; revision=876257